--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title> Intellipaat </title>
+<title> Krisotek </title>
 </head>
 <body style = "background-image:url('images/github3.jpg'); background-size: 100%">
-<h2 ALIGN=CENTER>Hello world!</h2>
+<h2 ALIGN=CENTER>Hi, This is a dev-test project build on jenkins triggered by push to github!</h2>
 </body>
 </html>
