--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> Krisotek </title>
+<title> krisotech </title>
 </head>
 <body style = "background-image:url('images/github3.jpg'); background-size: 100%">
 <h2 ALIGN=CENTER>Hi, This is a dev-test project build on jenkins triggered by push to github!</h2>
