--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title> Intel-Tech </title>
 </head>
 <body style = "background-image:url('images/github3.jpg'); background-size: 100%">
-<h2 ALIGN=CENTER>Hi This is a master-Test-job build on push to master!</h2>
+<h2 ALIGN=CENTER>Hi This is a master-Test-job build on push to master</h2>
 </body>
 </html>
